kubernetes/matverseny-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
  namespace: matverseny
spec:
  rules:
    - host: api.193.verseghy-gimnazium.net
      http:
        paths:
          - path: "/(?!(readiness|liveness)).*"
            pathType: Prefix
            backend:
              service:
                name: matverseny-backend
                port:
                  number: 3002
  tls:
    - hosts:
        - api.193.verseghy-gimnazium.net
      secretName: ingress-tls
